feature(form): Добавлен метод создания формы
