# internal/handler/dto/form.go
@@ -5,9 +5,15 @@ import "time"
 type FormResponse struct {
 	ID string `json:"id"`
 	Active bool `json:"active"`
+	Name string `json:"name"`
 	DateCreate time.Time `json:"date_create"`
 	DateUpdate time.Time `json:"date_update"`
 	Fields []FieldResponse `json:"fields"`
+}
+
+type CreateFormRequest struct {
+	Active bool `json:"active"`
+	Name string `json:"name"`
 }
 
 type FieldResponse struct {
